fix(theme,app): fix stylesheet in dark mode

--- a/src/assets/theme/normal.scss
+++ b/src/assets/theme/normal.scss
@@ -7,3 +7,4 @@ $main-font: rgba(0, 0, 0, 0.85);
 $main-bg-dark: #1f1f1f;
 $float-bg-dark: #282828;
 $main-font-dark: rgba(255, 255, 255, 0.85);
+$main-border-dark: #4e4e4e;
